@@ -7,7 +7,6 @@ sub skeleton() is export {
 %skeleton{'bin/app.pl6'} =
 q{use v6.c;
 use Bailador;
-Bailador::import();
 
 my $version = '0.0.1';
 
@@ -26,6 +25,7 @@ use Bailador::Test;
 plan 1;
 
 %*ENV<P6W_CONTAINER> = 'Bailador::Test';
+%*ENV<BAILADOR_APP_ROOT> = $*CWD.absolute;
 my $app = EVALFILE "bin/app.pl6";
 
 subtest {
